--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "gridfs-stream": "^1.1.1",
