--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "description": "",
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
+    "aws-sdk": "^2.1691.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "docker": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "gridfs-stream": "^1.1.1",
+    "imagekit": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
